# tradary

./: .gitignore  Anchor.toml
app/types/: index.ts
programs/tradary/: Cargo.toml
programs/tradary/src/: constants.rs  errors.rs  lib.rs
programs/tradary/src/instructions/: add_trade_notes.rs  close_trade.rs  create_tag.rs  create_trade.rs  initialize_user.rs  mod.rs  update_user_profile.rs
programs/tradary/src/state/: mod.rs  tag_account.rs  trade_account.rs  user_account.rs
tests/: tradary-program.ts
