[package]
name = "tradary-program"
version = "0.1.0"
description = "Tradary - On-chain trading journal on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tradary"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"


